# rsdeseq2

./: .gitignore  .ignore  Cargo.toml  LICENSE  README.md
crates/rsdeseq2/: Cargo.toml  README.md
crates/rsdeseq2/benches/: deseq_pipeline_bench.rs  dispersion_bench.rs  glm_gene_bench.rs
crates/rsdeseq2/examples/: compare_map_dispersion_fixture.rs  compare_se_covariance_fixture.rs
crates/rsdeseq2/src/: all_zero.rs  bindings.rs  cli.rs  contrasts.rs  cooks.rs  core.rs  design.rs  diagnostics.rs  errors.rs  independent_filtering.rs  io.rs  lib.rs  main.rs  matrix.rs  multiple_testing.rs  normalization.rs  options.rs  prelude.rs  results.rs
crates/rsdeseq2/src/cli/: implementation.rs
crates/rsdeseq2/src/cli/implementation/: analysis.rs  args.rs  helpers.rs  run.rs  tests.rs  writers.rs
crates/rsdeseq2/src/core/: implementation.rs
crates/rsdeseq2/src/core/implementation/: counts.rs  fit_state.rs  helpers.rs  outputs.rs  tests.rs
crates/rsdeseq2/src/design/: implementation.rs
crates/rsdeseq2/src/design/implementation/: basics.rs  expanded.rs  formula_assembly.rs  formula_entry.rs  formula_factors.rs  formula_state.rs  formula_terms.rs  formula_validation.rs  validation.rs
crates/rsdeseq2/src/dispersion/: gene_est.rs  map.rs  mod.rs  prior.rs  trend.rs
crates/rsdeseq2/src/dispersion/gene_est/: implementation.rs  mod.rs
crates/rsdeseq2/src/glm/: beta.rs  dispersion_fit.rs  fallback.rs  irls.rs  lrt.rs  mod.rs  nb.rs  r_arithmetic.rs  wald.rs  weights.rs
crates/rsdeseq2/src/io/: implementation.rs
crates/rsdeseq2/src/io/implementation/: align.rs  format_validation.rs  read.rs  tests.rs  write_matrices.rs  write_results.rs
crates/rsdeseq2/src/math/: distributions.rs  median.rs  mod.rs  optim.rs  qr.rs  special.rs
crates/rsdeseq2/src/results/: implementation.rs
crates/rsdeseq2/src/results/implementation/: beta_prior_additive.rs  beta_prior_core.rs  beta_prior_factor.rs  beta_prior_formula.rs  cooks_replacement.rs  metadata_validation.rs  types.rs  wald_lrt.rs
crates/rsdeseq2/src/transform/: mod.rs  norm.rs  rlog.rs  vst.rs
crates/rsdeseq2/tests/: base_mean.rs  cli.rs  contrasts.rs  cooks.rs  cooks_reference.rs  design.rs  diagnostics.rs  dispersion_gene_est.rs  dispersion_map.rs  dispersion_prior.rs  dispersion_reference.rs  dispersion_trend.rs  glm_intercept.rs  glm_irls.rs  independent_filtering.rs  lrt.rs  lrt_pipeline.rs  lrt_reference.rs  multiple_testing.rs  native_lrt_pipeline.rs  native_wald_pipeline.rs  nb_likelihood.rs  observation_weights.rs  results.rs  results_reference.rs  se_covariance_reference.rs  size_factors.rs  thread_invariance.rs  transform.rs  wald.rs  wald_pipeline.rs  wald_reference.rs
crates/rsdeseq2/tests/common/: mod.rs
crates/rsdeseq2/tests/data/: README.md
docs/: algorithms.md  cli.md  (+9 more)
(+183 files in other folders)
