[workspace]
members = ["crates/rsdeseq2"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/deminden/rsdeseq2"
rust-version = "1.96"

[workspace.dependencies]
approx = "0.5"
clap = { version = "4.6", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }
csv = "1.4"
nalgebra = "0.33"
rayon = "1.12"
rcompat-locfit = { git = "https://github.com/deminden/rcompat-locfit", rev = "0f0b8246e261a57bf074915bc2709c564ca253a0" }
rcompat-lbfgsb = { git = "https://github.com/deminden/rcompat-lbfgsb", rev = "b3654162c4b24697e73456ce177e480e1610fc37" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18"
thiserror = "2.0"
