[workspace]
members = ["crates/rsdeseq2"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/deminden/rsdeseq2"
rust-version = "1.96"

[workspace.dependencies]
approx = "0.5"
clap = { version = "4.6", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }
csv = "1.4"
nalgebra = "0.33"
rayon = "1.12"
rcompat-locfit = "0.1.3"
rcompat-lbfgsb = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18"
thiserror = "2.0"
