[workspace]
members = ["crates/rsdeseq2"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/deminden/rsdeseq2"
rust-version = "1.96"

[workspace.dependencies]
approx = "0.5.1"
clap = { version = "4.6.1", features = ["derive"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
csv = "1.4.0"
nalgebra = "0.35.0"
rayon = "1.12.0"
rcompat-locfit = "0.1.4"
rcompat-lbfgsb = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
statrs = "0.18.0"
thiserror = "2.0.18"
