[package]
name = "rsdeseq2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Early Rust implementation of core DESeq2 workflow stages"
readme = "README.md"

[lib]
name = "rsdeseq2"
path = "src/lib.rs"

[[bin]]
name = "rsdeseq2"
path = "src/main.rs"

[[bench]]
name = "deseq_pipeline_bench"
harness = false

[[bench]]
name = "glm_gene_bench"
harness = false

[[bench]]
name = "dispersion_bench"
harness = false

[dependencies]
clap.workspace = true
csv.workspace = true
nalgebra.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
statrs.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
